--- a/Pipfile
+++ b/Pipfile
@@ -4,16 +4,16 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-flask = "3.1.0"
+flask = "*"
 mediapipe = "0.10.18"
-opencv-python = "4.10.0.84"
-pandas = "2.2.3"
+opencv-python = "*"
+pandas = "*"
 scikit-learn = "1.6.1"
-keras = "3.8.0"
-tensorflow = "2.18.0"
-flask-cors = "5.0.0"
+keras = "*"
+tensorflow = "*"
+flask-cors = "*"
 gunicorn = "*"
 flask-talisman = "*"
 
 [requires]
-python_version = "3.9.13"
+python_version = "3.9"
